{
  "version": 4,
  "terraform_version": "0.15.0",
  "serial": 152,
  "lineage": "361ea90c-bc56-a6d4-59fc-7a46e1b86dbd",
  "resources": [
    {
      "mode": "data",
      "type": "aws_instance",
      "name": "instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "ami": "ami-077e31c4939f6a2f3",
            "arn": "arn:aws:ec2:us-east-2:945793393231:instance/i-06d8da82a1660248e",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "get_user_data": false,
            "id": "i-06d8da82a1660248e",
            "instance_id": "i-06d8da82a1660248e",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "key_name": "Piggy_SSH_Key_d19a146f",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "network_interface_id": "eni-0e21f1de548e0adec",
            "private_dns": "ip-10-0-0-176.us-east-2.compute.internal",
            "private_ip": "10.0.0.176",
            "public_dns": "ec2-18-220-148-247.us-east-2.compute.amazonaws.com",
            "public_ip": "18.220.148.247",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f5cd742ed87a6b68",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09affcde9e70ad734",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-03f4039bf05e5781d"
            ]
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_route_table",
      "name": "rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:945793393231:route-table/rtb-074bf602becd674c6",
            "associations": [
              {
                "gateway_id": "",
                "main": false,
                "route_table_association_id": "rtbassoc-04b3fa817e28bd661",
                "route_table_id": "rtb-074bf602becd674c6",
                "subnet_id": "subnet-09affcde9e70ad734"
              },
              {
                "gateway_id": "",
                "main": true,
                "route_table_association_id": "rtbassoc-0f84f0f4e888a9add",
                "route_table_id": "rtb-074bf602becd674c6",
                "subnet_id": ""
              }
            ],
            "filter": null,
            "gateway_id": null,
            "id": "rtb-074bf602becd674c6",
            "owner_id": "945793393231",
            "route_table_id": "rtb-074bf602becd674c6",
            "routes": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09b60120f65ce7b8c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "subnet_id": null,
            "tags": {},
            "vpc_id": "vpc-051ad5133c81ce572"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "cloudhsm_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:945793393231:security-group/sg-0e850201ac5e4d83d",
            "description": "Security group for CloudHSM cluster cluster-7euzgb6u6dz",
            "filter": [
              {
                "name": "group-name",
                "values": [
                  "*cloudhsm*"
                ]
              },
              {
                "name": "vpc-id",
                "values": [
                  "vpc-051ad5133c81ce572"
                ]
              }
            ],
            "id": "sg-0e850201ac5e4d83d",
            "name": "cloudhsm-cluster-7euzgb6u6dz-sg",
            "tags": {},
            "vpc_id": "vpc-051ad5133c81ce572"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-077e31c4939f6a2f3",
            "arn": "arn:aws:ec2:us-east-2:945793393231:instance/i-06d8da82a1660248e",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06d8da82a1660248e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Piggy_SSH_Key_d19a146f",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0e21f1de548e0adec",
            "private_dns": "ip-10-0-0-176.us-east-2.compute.internal",
            "private_ip": "10.0.0.176",
            "public_dns": "ec2-18-220-148-247.us-east-2.compute.amazonaws.com",
            "public_ip": "18.220.148.247",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f5cd742ed87a6b68",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09affcde9e70ad734",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-03f4039bf05e5781d"
            ]
          },
          "dependencies": [
            "aws_subnet.cloudhsm_public_subnet",
            "aws_vpc.cloudhsm_vpc",
            "data.aws_ami.amazon_linux_2",
            "data.aws_security_groups.default_security_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:945793393231:internet-gateway/igw-09b60120f65ce7b8c",
            "id": "igw-09b60120f65ce7b8c",
            "owner_id": "945793393231",
            "vpc_id": "vpc-051ad5133c81ce572"
          },
          "dependencies": [
            "aws_subnet.cloudhsm_public_subnet",
            "aws_vpc.cloudhsm_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "igw_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-09b60120f65ce7b8c",
            "id": "r-rtb-074bf602becd674c61080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-074bf602becd674c6",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.cloudhsm_public_subnet",
            "aws_vpc.cloudhsm_vpc",
            "data.aws_route_table.rt",
            "aws_internet_gateway.igw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04b3fa817e28bd661",
            "route_table_id": "rtb-074bf602becd674c6",
            "subnet_id": "subnet-09affcde9e70ad734"
          },
          "dependencies": [
            "data.aws_route_table.rt",
            "aws_subnet.cloudhsm_public_subnet",
            "aws_vpc.cloudhsm_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "Add_SSH_Port",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "67.85.179.67/32"
            ],
            "description": "",
            "from_port": 22,
            "id": "sgrule-1741094683",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-03f4039bf05e5781d",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.cloudhsm_vpc",
            "data.aws_security_groups.default_security_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "cloudhsm_private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:945793393231:subnet/subnet-096b0d90950c1937c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/28",
            "id": "subnet-096b0d90950c1937c",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "945793393231",
            "tags": {
              "Name": "cloudhsm private subnet"
            },
            "tags_all": {
              "Name": "cloudhsm private subnet"
            },
            "vpc_id": "vpc-051ad5133c81ce572"
          },
          "dependencies": [
            "aws_vpc.cloudhsm_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:945793393231:subnet/subnet-0ef12a4d963ec212d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.2.0/28",
            "id": "subnet-0ef12a4d963ec212d",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "945793393231",
            "tags": {
              "Name": "cloudhsm private subnet"
            },
            "tags_all": {
              "Name": "cloudhsm private subnet"
            },
            "vpc_id": "vpc-051ad5133c81ce572"
          },
          "dependencies": [
            "aws_vpc.cloudhsm_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:945793393231:subnet/subnet-053e0e68af5053aa6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.3.0/28",
            "id": "subnet-053e0e68af5053aa6",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "945793393231",
            "tags": {
              "Name": "cloudhsm private subnet"
            },
            "tags_all": {
              "Name": "cloudhsm private subnet"
            },
            "vpc_id": "vpc-051ad5133c81ce572"
          },
          "dependencies": [
            "aws_vpc.cloudhsm_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "cloudhsm_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:945793393231:subnet/subnet-09affcde9e70ad734",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-09affcde9e70ad734",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "945793393231",
            "tags": {
              "Name": "CloudHSM public subnet"
            },
            "tags_all": {
              "Name": "CloudHSM public subnet"
            },
            "vpc_id": "vpc-051ad5133c81ce572"
          },
          "dependencies": [
            "aws_vpc.cloudhsm_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "cloudhsm_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:945793393231:vpc/vpc-051ad5133c81ce572",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0befd4a9f796bc3cb",
            "default_route_table_id": "rtb-074bf602becd674c6",
            "default_security_group_id": "sg-03f4039bf05e5781d",
            "dhcp_options_id": "dopt-4b325b20",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-051ad5133c81ce572",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-074bf602becd674c6",
            "owner_id": "945793393231",
            "tags": {
              "Name": "CloudHSM"
            },
            "tags_all": {
              "Name": "CloudHSM"
            }
          }
        }
      ]
    }
  ]
}